gitops-new/stage01-model-serving/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: private-ai-demo
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: api
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: console
  selector:
    app: minio
