gitops-new/stage01-model-serving/minio/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-api
  namespace: private-ai-demo
  labels:
    app: minio
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  namespace: private-ai-demo
  labels:
    app: minio
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
